Fix status icon
Status icon was too large, color was not following Material Guidelines.

--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -1106,3 +1106,9 @@ section {
     width: $material-icon-size;
   }
 }
+
+.topic-statuses .topic-status .d-icon {
+   height: 24px !important;
+   width: 24px !important;
+   font-size: 12px !important;
+}
